--- a/css/jumbotron-narrow.css
+++ b/css/jumbotron-narrow.css
@@ -45,10 +45,21 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  padding: 1px;
 }
 .jumbotron .btn {
   padding: 14px 24px;
   font-size: 21px;
+}
+
+.awesome_img {
+  cursor: pointer;
+  width: 50%;
+  height: 50%;
+}
+
+.fb-like {
+  vertical-align: text-bottom !important;
 }
 
 /* Supporting marketing content */
