--- a/css/jumbotron-narrow.css
+++ b/css/jumbotron-narrow.css
@@ -46,7 +46,9 @@ body {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
   padding: 1px;
+  overflow: hidden;
 }
+
 .jumbotron .btn {
   padding: 14px 24px;
   font-size: 21px;
@@ -54,8 +56,19 @@ body {
 
 .awesome_img {
   cursor: pointer;
-  width: 50%;
-  height: 50%;
+  max-width: 90%;
+  max-height: 50%;
+}
+
+.awesome_img.animate {
+  animation: swing 2s infinite ease-in-out;
+}
+
+@keyframes swing {
+  0%, 100% { transform: rotate(-30deg); }
+  20% {transform:rotate(0deg);}
+  50% { transform: rotate(30deg); }
+  80% {transform:rotate(0deg);}
 }
 
 .fb-like {
