--- a/css/jumbotron-narrow.css
+++ b/css/jumbotron-narrow.css
@@ -1,13 +1,10 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 20px 20px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
+.header, .marketing, .footer {
   padding-right: 15px;
   padding-left: 15px;
 }
@@ -16,6 +13,7 @@ body {
 .header {
   border-bottom: 1px solid #e5e5e5;
 }
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   padding-bottom: 19px;
@@ -70,6 +68,7 @@ body {
 }
 
 /* Responsive: Portrait tablets and up */
+
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
   .header,
@@ -78,10 +77,12 @@ body {
     padding-right: 0;
     padding-left: 0;
   }
+  
   /* Space out the masthead */
   .header {
     margin-bottom: 30px;
   }
+  
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
