Change rocking animation to a smoother linear rock

--- a/css/jumbotron-narrow.css
+++ b/css/jumbotron-narrow.css
@@ -61,7 +61,7 @@ body {
 }
 
 .awesome_img.animate {
-  animation: swing 2s infinite ease-in-out;
+  animation: swing 2s infinite linear;
 }
 
 @keyframes swing {
